assets/css/_home-grid.scss
$colCount: 12;
$rowCount: 30;

.grid {
	min-height: 23.5vw;
  position: relative;
  
  @include max479p9 {
    margin-bottom: 81px;
  }

  @include min480 {
	  margin: 60px auto;
    width: 95.76vw;
    display: grid;
    gap: 6px;

    &::after {
	  	content: " ";
   		display: block;
   		height: 0;
   		clear: both;
	  }
  }

  @include min800 {
    height: 95.76vw * $rowCount / $colCount;
    grid-template-columns: repeat($colCount, 1fr);
    grid-template-rows: repeat($rowCount, 1fr);
  }

  @media all and (min-width: 480px) and (max-width: 799.9px) {
    width: 94vw;
    grid-template-columns: 33fr 16.5fr 16.5fr 33fr;
    grid-template-rows: repeat(10, 1fr);
    
    img {
			margin: 0 !important;
			height: auto !important;
    
      &:not(.stretchfix) {
				width: 100% !important;
			}
    
      &.stretchfix {
				width: 140% !important;
			}
		}
  }
}

.grid__item {
	h4 {
		font-weight: normal;
		margin: 11px 15px;
		position: absolute;
		text-align: left;
		text-decoration: none;
		z-index: 99999;
  }
  
  @include max479p9 {
    margin-bottom: 10px;
		overflow: hidden;
    width: 100%;
    
		img {
			display: block;
			width: 100%;
		}
  }

  @include min480 {
    position: relative;
    perspective: 800px;
    -webkit-perspective: 800px;
    -moz-perspective: 800px;
    perspective-origin: 0% 150%;
    -webkit-perspective-origin: 0% 150%;
    -moz-perspective-origin: 0% 150%;
    height: 100%;
    width: 100%;
    a {
      position: relative;
      @include flexbox();
      justify-content: center;
      align-items: center;
      width: 100%;
      height: 100%;
      transform-origin: 50% 100%;
      -webkit-transform-origin: 50% 100%;
      -moz-transform-origin: 50% 100%;
      transform-style: preserve-3d;
      -webkit-transform-style: preserve-3d;
      -moz-transform-style: preserve-3d;
      transition: box-shadow 600ms;
      -webkit-transition: box-shadow 600ms;
      perspective: 800px;
      perspective-origin: 0% 150%;
      div {
        transition: transform 400ms;
        -webkit-transition: transform 400ms;
        overflow: hidden;
        height: 100%;
        width: 100%;
        &:hover,
        &:focus {
          transform: translateZ(8px);
          -webkit-transform: translateZ(8px);
          -ms-transform: translateZ(8px);
          box-shadow: 0px 0px 25px 0px rgba(77, 69, 69, .25);

          img {
            transform: scale(1.03);
            -webkit-transform: scale(1.03);
            -ms-transform: scale(1.03);
          }
        }
      }
    }
    h4 {
        left: 0;
      top: 0;
    }
    img {
        position: relative;
      display: block;
      flex: none;
        min-height: 100%;
      min-width: 101%;
      transition: all 250ms;
      -webkit-transition: all 250ms;
    }
    &:hover a {
      box-shadow: 8px -5px 25px 0px rgba(77, 69, 69, .05);
    }
  }

  @media all and (min-width: 480px) and (max-width: 799.9px) {
    height: 30vw;

    &:nth-child(1) {
      grid-column: 1/3;
      grid-row: 1/2;
    }

    &:nth-child(2) {
      grid-column: 3/6;
      grid-row: 1/2;
    }

    &:nth-child(3) {
      grid-column: 1/2;
      grid-row: 2/3;
    }

    &:nth-child(4) {
      grid-column: 2/4;
      grid-row: 2/3;
    }

    &:nth-child(5) {
      grid-column: 4/6;
      grid-row: 2/3;
    }

    &:nth-child(6) {
      grid-column: 1/3;
      grid-row: 3/4;
    }

    &:nth-child(7) {
      grid-column: 3/6;
      grid-row: 3/4;
    }

    &:nth-child(8) {
      grid-column: 1/2;
      grid-row: 4/5;
    }

    &:nth-child(9) {
      grid-column: 2/4;
      grid-row: 4/5;
    }

    &:nth-child(10) {
      grid-column: 4/6;
      grid-row: 4/5;
    }

    &:nth-child(11) {
      grid-column: 1/3;
      grid-row: 5/6;
    }

    &:nth-child(12) {
      grid-column: 3/6;
      grid-row: 5/6;
    }

    &:nth-child(13) {
      grid-column: 1/2;
      grid-row: 6/7;
    }

    &:nth-child(14) {
      grid-column: 2/4;
      grid-row: 6/7;
    }

    &:nth-child(15) {
      grid-column: 4/6;
      grid-row: 6/7;
    }

    &:nth-child(16) {
      grid-column: 1/3;
      grid-row: 7/8;
    }

    &:nth-child(17) {
      grid-column: 3/6;
      grid-row: 7/8;
    }

    &:nth-child(18) {
      grid-column: 1/2;
      grid-row: 8/9;
    }

    &:nth-child(19) {
      grid-column: 2/4;
      grid-row: 8/9;
    }

    &:nth-child(20) {
      grid-column: 4/6;
      grid-row: 8/9;
    }

    &:nth-child(21) {
      grid-column: 1/3;
      grid-row: 9/10;
    }

    &:nth-child(22) {
      grid-column: 3/6;
      grid-row: 9/10;
    }

    &:nth-child(23) {
      grid-column: 1/2;
      grid-row: 10/11;
    }

    &:nth-child(24) {
      grid-column: 2/4;
      grid-row: 10/11;
    }

    &:nth-child(25) {
      grid-column: 4/6;
      grid-row: 10/11;
    }
  }

  @include min800 {
    &:nth-child(24) {
      grid-column-start: $colCount + 2 - 2;
      grid-column-end: $colCount + 2 - 6;
      grid-row-start: $rowCount + 2 - 2;
      grid-row-end: $rowCount + 2 - 5;
    }

    &:nth-child(23) {
      grid-column-start: $colCount + 2 - 6;
      grid-column-end: $colCount + 2 - 10; 
      grid-row-start: $rowCount + 2 - 1;
      grid-row-end: $rowCount + 2 - 5;
    }

    &:nth-child(22) {
      grid-column-start: $colCount + 2 - 10;
      grid-column-end: $colCount + 2 - 13; 
      grid-row-start: $rowCount + 2 - 3;
      grid-row-end: $rowCount + 2 - 5;
    }

    &:nth-child(21) {
      grid-column-start: $colCount + 2 - 2;
      grid-column-end: $colCount + 2 - 7; 
      grid-row-start: $rowCount + 2 - 5;
      grid-row-end: $rowCount + 2 - 10;
    }

    &:nth-child(20) {
      grid-column-start: $colCount + 2 - 7;
      grid-column-end: $colCount + 2 - 9; 
      grid-row-start: $rowCount + 2 - 5;
      grid-row-end: $rowCount + 2 - 7;
    }

    &:nth-child(19) {
      grid-column-start: $colCount + 2 - 7;
      grid-column-end: $colCount + 2 - 11; 
      grid-row-start: $rowCount + 2 - 7;
      grid-row-end: $rowCount + 2 - 10;
    }

    &:nth-child(18) {
      grid-column-start: $colCount + 2 - 11;
      grid-column-end: $colCount + 2 - 13; 
      grid-row-start: $rowCount + 2 - 8;
      grid-row-end: $rowCount + 2 - 10;
    }

    &:nth-child(17) {
      grid-column-start: $colCount + 2 - 6;
      grid-column-end: $colCount + 2 - 8; 
      grid-row-start: $rowCount + 2 - 10;
      grid-row-end: $rowCount + 2 - 12;
    }

    &:nth-child(16) {
      grid-column-start: $colCount + 2 - 8;
      grid-column-end: $colCount + 2 - 12; 
      grid-row-start: $rowCount + 2 - 10;
      grid-row-end: $rowCount + 2 - 14;
    }

    &:nth-child(15) {
      grid-column-start: $colCount + 2 - 2;
      grid-column-end: $colCount + 2 - 5; 
      grid-row-start: $rowCount + 2 - 12;
      grid-row-end: $rowCount + 2 - 14;
    }

    &:nth-child(14) {
      grid-column-start: $colCount + 2 - 5;
      grid-column-end: $colCount + 2 - 8; 
      grid-row-start: $rowCount + 2 - 12;
      grid-row-end: $rowCount + 2 - 14;
    }

    &:nth-child(13) {
      grid-column-start: $colCount + 2 - 1;
      grid-column-end: $colCount + 2 - 5; 
      grid-row-start: $rowCount + 2 - 16;
      grid-row-end: $rowCount + 2 - 19;
    }

    &:nth-child(12) {
      grid-column-start: $colCount + 2 - 5;
      grid-column-end: $colCount + 2 - 10; 
      grid-row-start: $rowCount + 2 - 14;
      grid-row-end: $rowCount + 2 - 19;
    }

    &:nth-child(11) {
      grid-column-start: $colCount + 2 - 10;
      grid-column-end: $colCount + 2 - 13; 
      grid-row-start: $rowCount + 2 - 16;
      grid-row-end: $rowCount + 2 - 19;
    }

    &:nth-child(10) {
      grid-column-start: $colCount + 2 - 2;
      grid-column-end: $colCount + 2 - 4; 
      grid-row-start: $rowCount + 2 - 20;
      grid-row-end: $rowCount + 2 - 22;
    }

    &:nth-child(9) {
      grid-column-start: $colCount + 2 - 4;
      grid-column-end: $colCount + 2 - 7; 
      grid-row-start: $rowCount + 2 - 19;
      grid-row-end: $rowCount + 2 - 22;
    }

    &:nth-child(8) {
      grid-column-start: $colCount + 2 - 7;
      grid-column-end: $colCount + 2 - 12; 
      grid-row-start: $rowCount + 2 - 19;
      grid-row-end: $rowCount + 2 - 22;
    }

    &:nth-child(7) {
      grid-column-start: $colCount + 2 - 1;
      grid-column-end: $colCount + 2 - 4; 
      grid-row-start: $rowCount + 2 - 24;
      grid-row-end: $rowCount + 2 - 27;
    }

    &:nth-child(6) {
      grid-column-start: $colCount + 2 - 4;
      grid-column-end: $colCount + 2 - 9; 
      grid-row-start: $rowCount + 2 - 22;
      grid-row-end: $rowCount + 2 - 27;
    }

    &:nth-child(5) {
      grid-column-start: $colCount + 2 - 9;
      grid-column-end: $colCount + 2 - 13; 
      grid-row-start: $rowCount + 2 - 22;
      grid-row-end: $rowCount + 2 - 25;
    }

    &:nth-child(4) {
      grid-column-start: $colCount + 2 - 9;
      grid-column-end: $colCount + 2 - 11; 
      grid-row-start: $rowCount + 2 - 25;
      grid-row-end: $rowCount + 2 - 27;
    }

    &:nth-child(3) {
      grid-column-start: $colCount + 2 - 1;
      grid-column-end: $colCount + 2 - 4; 
      grid-row-start: $rowCount + 2 - 27;
      grid-row-end: $rowCount + 2 - 30;
    }

    &:nth-child(2) {
      grid-column-start: $colCount + 2 - 4;
      grid-column-end: $colCount + 2 - 7; 
      grid-row-start: $rowCount + 2 - 27;
      grid-row-end: $rowCount + 2 - 29;
    }

    &:nth-child(1) {
      grid-column-start: $colCount + 2 - 7;
      grid-column-end: $colCount + 2 - 12; 
      grid-row-start: $rowCount + 2 - 27;
      grid-row-end: $rowCount + 2 - 31;
    }
  }
}

.grid__item__wrap {
  @include min480 {
    box-sizing: border-box;
    float: left;
    padding: 3px;
  }

  @include min800 {
    h4 {
			visibility: hidden;
    }
    
		&:hover h4,
		&:focus h4 {
			visibility: visible;
    }
  }

  @media all and (min-width: 480px) and (max-width: 799.9px) {
    position: relative;
  }
}

